# lago-rust-client

./: Cargo.toml  README.md
examples/: subscription.rs
lago-cli/: Cargo.toml
lago-cli/src/: main.rs
lago-rust-client/: Cargo.toml
lago-rust-client/src/: addon.rs  api.rs  billable_metric.rs  charge.rs  client.rs  coupon.rs  currency.rs  customer.rs  error.rs  event.rs  invoice.rs  lib.rs  organization.rs  payment_provider.rs  plan.rs  response.rs  subscription.rs  webhook.rs
lago-webhook/: Cargo.toml
lago-webhook/src/: main.rs
src/: api.rs  client.rs  currency.rs  error.rs  event.rs  lib.rs  request.rs  response.rs  subscription.rs
