[package]
name = "lago-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["alloc", "serde"] }
hyper = { version = "0.14", features = ["client"] }
hyper-tls = "0.5.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
pretty_env_logger = "0.4.0"
